// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReferralRewards should render component correctly 1`] = `
<React.Fragment>
  <PeachText
    style={
      {
        "fontFamily": "Baloo2-Regular",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 24,
        "marginBottom": 16,
        "marginLeft": 28,
        "marginRight": 28,
        "marginTop": 16,
        "textAlign": "center",
      }
    }
  >
    Your referrals have already traded 200 000 sats on Peach!
    


    Select your reward, or continue saving for cool stuff
  </PeachText>
  <RadioButtons
    items={
      [
        {
          "disabled": true,
          "display": <RewardItem
            reward={
              {
                "id": "customReferralCode",
                "requiredPoints": 100,
              }
            }
          />,
          "value": "customReferralCode",
        },
        {
          "disabled": true,
          "display": <RewardItem
            reward={
              {
                "id": "noPeachFees",
                "requiredPoints": 200,
              }
            }
          />,
          "value": "noPeachFees",
        },
        {
          "disabled": true,
          "display": <RewardItem
            reward={
              {
                "id": "sats",
                "requiredPoints": 300,
              }
            }
          />,
          "value": "sats",
        },
      ]
    }
    onButtonPress={[MockFunction]}
  />
  <Button
    disabled={true}
    iconId="gift"
    onPress={[MockFunction]}
    style={
      {
        "alignSelf": "center",
        "marginBottom": 40,
        "marginTop": 20,
      }
    }
  >
    select reward
  </Button>
</React.Fragment>
`;

exports[`ReferralRewards should render component correctly with selected reward 1`] = `
<React.Fragment>
  <PeachText
    style={
      {
        "fontFamily": "Baloo2-Regular",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 24,
        "marginBottom": 16,
        "marginLeft": 28,
        "marginRight": 28,
        "marginTop": 16,
        "textAlign": "center",
      }
    }
  >
    Your referrals have already traded 200 000 sats on Peach!
    


    Select your reward, or continue saving for cool stuff
  </PeachText>
  <RadioButtons
    items={
      [
        {
          "disabled": true,
          "display": <RewardItem
            reward={
              {
                "id": "customReferralCode",
                "requiredPoints": 100,
              }
            }
          />,
          "value": "customReferralCode",
        },
        {
          "disabled": true,
          "display": <RewardItem
            reward={
              {
                "id": "noPeachFees",
                "requiredPoints": 200,
              }
            }
          />,
          "value": "noPeachFees",
        },
        {
          "disabled": true,
          "display": <RewardItem
            reward={
              {
                "id": "sats",
                "requiredPoints": 300,
              }
            }
          />,
          "value": "sats",
        },
      ]
    }
    onButtonPress={[MockFunction]}
    selectedValue="customReferralCode"
  />
  <Button
    disabled={false}
    iconId="gift"
    onPress={[MockFunction]}
    style={
      {
        "alignSelf": "center",
        "marginBottom": 40,
        "marginTop": 20,
      }
    }
  >
    select reward
  </Button>
</React.Fragment>
`;
